# agent-robert

./: README.md
agent/: config.example.json  pyproject.toml
agent/docs/dev/: ARCHITECTURE.md  BACKLOG.md  PRD.md  RESEARCH.md  TDD.md
agent/docs/dev/sprints/: SPRINT-01.md
agent/robert/: __init__.py  agent.py  main.py
agent/robert/composition/: startup.py
agent/robert/modules/: agent.py  config.py  providers.py  session.py  tools.py  tools_ha.py
agent/tests/: test_config.py  test_session.py  test_tools.py
clients/agent-chat/: README.md  index.html  start_chat.bat
clients/agent-chat/css/: app.css
clients/agent-chat/js/: api.js  assistant.js  chat.js  main.js  recorder.js
clients/agent-core-s3/: ONBOARDING.md  README.md  platformio.ini
clients/agent-core-s3/src/: main.cpp
clients/agent-ha-bridge/: README.md
clients/agent-ha-bridge/custom_components/robert_bridge/: __init__.py  conversation.py  manifest.json
